--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,12 @@
 .text {
   color: white;
 }
+
+.score {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0.25rem 0.7rem;
+  border-radius: 8px;
+}
